--- a/1week/2_iris_rf.ipynb
+++ b/1week/2_iris_rf.ipynb
@@ -27,7 +27,7 @@
    "outputs": [],
    "source": [
     "# 붓꽃 데이터 CSV 파일 읽기\n",
-    "file_path = \"C:\\\\Users\\\\leehy\\\\ AI_class\\\\iris.csv\"  # 본인이 iris.csv를 저장한 경로를 입력합니다.\n",
+    "file_path = \"C:\\\\Users\\\\leehy\\\\ AI_class\\\\1week\\\\iris.csv\"  # 본인이 iris.csv를 저장한 경로를 입력합니다.\n",
     "df = pd.read_csv(file_path)"
    ]
   },
