--- a/2week/1_mobile_test.ipynb
+++ b/2week/1_mobile_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 31,
    "id": "1c8cf5a0-9313-45ac-8cff-f558053f0bfa",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 32,
    "id": "254d6683-4abc-49ab-9cac-356089f58ffb",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 33,
    "id": "832c51cd-80f8-4ea1-9f4e-94f7afa4cac5",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 34,
+   "id": "0a3c5705-e624-4beb-93b6-e1684803dc48",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "501     3\n",
+       "1924    1\n",
+       "1710    0\n",
+       "547     2\n",
+       "496     3\n",
+       "       ..\n",
+       "1204    1\n",
+       "1937    2\n",
+       "412     1\n",
+       "243     2\n",
+       "724     1\n",
+       "Name: price_range, Length: 400, dtype: int64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "id": "bc4fd1e4-6112-4b3a-8bf9-985d240d5a2f",
    "metadata": {},
    "outputs": [],
@@ -82,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 36,
    "id": "96466c4e-3496-47ed-9fe8-72ddceaec6be",
    "metadata": {},
    "outputs": [
