--- a/2week/2_test_titanic.ipynb
+++ b/2week/2_test_titanic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 2,
    "id": "3dc806a2-644f-4284-96dd-5b6fe478b664",
    "metadata": {},
    "outputs": [],
@@ -16,13 +16,12 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.svm import SVC\n",
-    "from sklearn.metrics import accuracy_score, confusion_matrix\n",
-    "\n"
+    "from sklearn.metrics import accuracy_score, confusion_matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "id": "03e7df08-d67d-4007-9c4b-1b309773750f",
    "metadata": {},
    "outputs": [],
@@ -34,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 4,
    "id": "ef37fc9b-dc45-47ce-880f-384685fcbf20",
    "metadata": {},
    "outputs": [
@@ -67,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "id": "a957f196-defe-41c3-af60-ea3fb2bc5f26",
    "metadata": {},
    "outputs": [],
@@ -80,9 +79,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "id": "ecea0a27-ac9c-4966-826b-3692e781efdb",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -105,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "id": "bd859943-b4d7-4140-b042-2d6596295be0",
    "metadata": {},
    "outputs": [],
@@ -116,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 8,
    "id": "7c3c9f9e-9e13-4c2d-bf6b-0a87dfeb3381",
    "metadata": {},
    "outputs": [],
@@ -128,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 9,
    "id": "2ca5e2ad-6895-4b26-9f29-56b33ead0abe",
    "metadata": {},
    "outputs": [
@@ -158,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 10,
    "id": "53ea41fb-ba06-4128-b826-9615d2ecf1cc",
    "metadata": {},
    "outputs": [],
@@ -175,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 11,
    "id": "236c8c3d-c944-4bd8-a428-6e9dffd02912",
    "metadata": {},
    "outputs": [],
@@ -195,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 12,
    "id": "678d9050-37f6-4e02-b10d-87aec56a2661",
    "metadata": {},
    "outputs": [
@@ -206,8 +210,8 @@
       "\n",
       "모델 정확도 결과:\n",
       "                 Model  Accuracy\n",
-      "0        Random Forest  0.787709\n",
-      "1        Decision Tree  0.754190\n",
+      "0        Random Forest  0.798883\n",
+      "1        Decision Tree  0.770950\n",
       "2  Logistic Regression  0.810056\n",
       "3                  KNN  0.698324\n",
       "4                  SVM  0.653631\n"
