--- a/6week/DL_classfication_pythorch_1.ipynb
+++ b/6week/DL_classfication_pythorch_1.ipynb
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "id": "b1eacc5d-e37a-4b14-9cac-937dd82d0eed",
    "metadata": {},
    "outputs": [
@@ -475,6 +475,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Accuracy: 81.17%\n",
       "Confusion Matrix:\n",
       "[[96 11]\n",
       " [18 29]]\n",
@@ -529,6 +530,7 @@
     "    specificity.append(tn / (tn + fp))\n",
     "\n",
     "# 결과 출력\n",
+    "print(f'Accuracy: {accuracy:.2f}%')\n",
     "print(f'Confusion Matrix:\\n{conf_matrix}')\n",
     "print(f'F1 Score: {f1:.2f}')\n",
     "print(f'Precision: {precision:.2f}')\n",
